// ////////////////////////////////////////////////////////////////////////////
// ////////////////////////////////////////////////////////////////////////////
// Test message for the MlbDev/ProtoBuf library.
// ////////////////////////////////////////////////////////////////////////////
// 
// Revision History  :  2015-06-20 --- Created in GpbUtils / MiscProjects repo
//                         Michael L. Brock
//                      2016-06-03 --- Copied over to ProtoBuf / MlbDev repo.
//                         Michael L. Brock
// 
// ////////////////////////////////////////////////////////////////////////////

package GpbElementInfoTestTwo;

import "GpbElementInfoTestTwo_Person.proto";

message AddressBook {
  repeated Person person = 1;
}

